<resources>
    <string name="app_name">SAARTHI</string>
    <string name="phone_number">Phone Number</string>
    <string name="_91">+91</string>
    <string name="Password">Password</string>
    <string name="saarthi">SAARTHI</string>
    <string name="next">NEXT</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="phonenumber">Phonenumber</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="rc">RC</string>
    <string name="insurance">Insurance</string>
    <string name="next1">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_user">New user ?</string>
    <string name="enter_pickup_location">Enter Pickup Location</string>
    <string name="enter_drop_location">Enter_Drop_location</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="sign_in">Sign In</string>

</resources>